tree-optimization/97709 - set abnormal flag when vectorizing live lanes

This properly sets the abnormal flag when vectorizing live lanes
when the original scalar was live across an abnormal edge.

2020-11-04  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/97709
	* tree-vect-loop.c (vectorizable_live_operation): Set
	SSA_NAME_OCCURS_IN_ABNORMAL_PHI when necessary.

	* gcc.dg/vect/bb-slp-pr97709.c: New testcase.